# Cos-Alpha-Hacktropica

./: .gitignore  GEMINI_SETUP.md  README.md  SUPERPLANE_INTEGRATION.md  algorand-integration-plan.md  docker-compose.superplane.yml  index.html  package-lock.json  package.json  start-presage.bat  start-presage.sh  stellar-solana-integration-plan.md  verify-integration.js
.windsurf/rules/: algorand-integration.md  security-integration.md
.windsurf/workflows/: algorand-integration.md
contracts/: DEPLOYMENT.md  README.md
contracts/algorand/: approval.teal  cosalpha_escrow.py  deploy.py  deployment.json
contracts/solana/: cosalpha_agentic.rs  deploy.cjs  deploy.js  deploy.mjs  deployment.json
contracts/stellar/: cosalpha_payment.rs  deploy.cjs  deploy.js  deploy.mjs  deployment.json
scripts/: start-superplane.bat  start-superplane.sh
src/: App.tsx  index.css
src/components/: FloatingPet.tsx  GeminiStatus.tsx  HackedScreensaver.tsx  HealthDashboard.tsx  MongoExample.tsx  SuperPlaneDashboard.tsx  Taskbar.tsx  Terminal.tsx  VitalMonitor.tsx  WeatherAnimation.tsx
src/contexts/: UnifiedWalletContext.tsx
src/hooks/: useAlgorand.ts  useMongoDB.ts  usePresage.ts  useSolana.ts  useSpeech.ts  useStellar.ts
src/lib/: commandExecutor.ts  figlet.ts  geminiInterpreter.ts  humanLanguageInterpreter.ts  mockMongoDB.ts  mongodb.ts  musicService.ts  packageManager.ts  petSystem.ts  presageService.ts  (+5 more)
src/presage/: CMakeLists.txt  README.md  build.bat  build.sh  hello_vitals.cpp  hello_vitals_mock.cpp  mock-server.js  package-lock.json  package.json  test-client.js
(+53 files in other folders)
